--- a/stats.ipynb
+++ b/stats.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "from plot_utils import data_dict\n",
     "from numpy import mean\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "pd.set_option('display.float_format', lambda x: '%.3f' % x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -56,6 +57,7 @@
        "      <th>success rate</th>\n",
        "      <th>success rate sts</th>\n",
        "      <th>accumulated reward</th>\n",
+       "      <th>accumulated reward std</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -63,145 +65,163 @@
        "      <th>1</th>\n",
        "      <td>CAT-RL</td>\n",
        "      <td>Acrobot-v1</td>\n",
-       "      <td>0.380410</td>\n",
-       "      <td>0.045072</td>\n",
-       "      <td>-3.476184e+08</td>\n",
+       "      <td>0.380</td>\n",
+       "      <td>0.045</td>\n",
+       "      <td>-347618363.500</td>\n",
+       "      <td>79685500.774</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>CAT-RL</td>\n",
        "      <td>CartPole-v1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.516508e+08</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>251650810.200</td>\n",
+       "      <td>57390804.337</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>CAT-RL</td>\n",
        "      <td>LunarLander-v2</td>\n",
-       "      <td>0.000150</td>\n",
-       "      <td>0.000252</td>\n",
-       "      <td>-4.025444e+09</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-4025443733.564</td>\n",
+       "      <td>71502043.625</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>CAT-RL</td>\n",
        "      <td>MountainCar-v0</td>\n",
-       "      <td>0.964527</td>\n",
-       "      <td>0.019723</td>\n",
-       "      <td>1.446449e+10</td>\n",
+       "      <td>0.965</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>14464492011.118</td>\n",
+       "      <td>580858094.467</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>CAT-RL</td>\n",
        "      <td>MountainCarContinuous-v0</td>\n",
-       "      <td>0.719381</td>\n",
-       "      <td>0.401781</td>\n",
-       "      <td>2.040210e+08</td>\n",
+       "      <td>0.719</td>\n",
+       "      <td>0.402</td>\n",
+       "      <td>204020978.288</td>\n",
+       "      <td>47719812.385</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>CAT-RL</td>\n",
        "      <td>Pendulum-v1</td>\n",
-       "      <td>0.019363</td>\n",
-       "      <td>0.015303</td>\n",
-       "      <td>-1.936006e+10</td>\n",
+       "      <td>0.019</td>\n",
+       "      <td>0.015</td>\n",
+       "      <td>-19360056614.880</td>\n",
+       "      <td>1090619204.989</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>TileCoding</td>\n",
        "      <td>Acrobot-v1</td>\n",
-       "      <td>0.860150</td>\n",
-       "      <td>0.020599</td>\n",
-       "      <td>1.020687e+09</td>\n",
+       "      <td>0.860</td>\n",
+       "      <td>0.021</td>\n",
+       "      <td>1020687281.900</td>\n",
+       "      <td>92993773.390</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>TileCoding</td>\n",
        "      <td>CartPole-v1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.858473e+08</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>185847254.600</td>\n",
+       "      <td>1584575.768</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>TileCoding</td>\n",
        "      <td>LunarLander-v2</td>\n",
-       "      <td>0.016700</td>\n",
-       "      <td>0.001496</td>\n",
-       "      <td>-1.761776e+09</td>\n",
+       "      <td>0.017</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>-1761775790.133</td>\n",
+       "      <td>37050527.710</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>TileCoding</td>\n",
        "      <td>MountainCar-v0</td>\n",
-       "      <td>0.138140</td>\n",
-       "      <td>0.007740</td>\n",
-       "      <td>1.355634e+09</td>\n",
+       "      <td>0.138</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>1355634141.843</td>\n",
+       "      <td>154421772.818</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>TileCoding</td>\n",
        "      <td>MountainCarContinuous-v0</td>\n",
-       "      <td>0.705800</td>\n",
-       "      <td>0.035818</td>\n",
-       "      <td>5.345090e+08</td>\n",
+       "      <td>0.706</td>\n",
+       "      <td>0.036</td>\n",
+       "      <td>534508976.190</td>\n",
+       "      <td>41252351.573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>TileCoding</td>\n",
        "      <td>Pendulum-v1</td>\n",
-       "      <td>0.027400</td>\n",
-       "      <td>0.004746</td>\n",
-       "      <td>-1.555522e+10</td>\n",
+       "      <td>0.027</td>\n",
+       "      <td>0.005</td>\n",
+       "      <td>-15555220716.758</td>\n",
+       "      <td>1003009570.746</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>binQ</td>\n",
        "      <td>Acrobot-v1</td>\n",
-       "      <td>0.513350</td>\n",
-       "      <td>0.016760</td>\n",
-       "      <td>-1.339428e+08</td>\n",
+       "      <td>0.513</td>\n",
+       "      <td>0.017</td>\n",
+       "      <td>-133942787.800</td>\n",
+       "      <td>51462217.431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>binQ</td>\n",
        "      <td>CartPole-v1</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.057733e+08</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>205773254.000</td>\n",
+       "      <td>5570689.014</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>binQ</td>\n",
        "      <td>LunarLander-v2</td>\n",
-       "      <td>0.016017</td>\n",
-       "      <td>0.001951</td>\n",
-       "      <td>-1.833857e+09</td>\n",
+       "      <td>0.016</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>-1833856965.663</td>\n",
+       "      <td>28385863.582</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>binQ</td>\n",
        "      <td>MountainCar-v0</td>\n",
-       "      <td>0.198180</td>\n",
-       "      <td>0.012595</td>\n",
-       "      <td>7.775134e+08</td>\n",
+       "      <td>0.198</td>\n",
+       "      <td>0.013</td>\n",
+       "      <td>777513395.587</td>\n",
+       "      <td>97302647.137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>binQ</td>\n",
        "      <td>MountainCarContinuous-v0</td>\n",
-       "      <td>0.406600</td>\n",
-       "      <td>0.023200</td>\n",
-       "      <td>6.614009e+08</td>\n",
+       "      <td>0.407</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>661400922.269</td>\n",
+       "      <td>23920781.425</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>binQ</td>\n",
        "      <td>Pendulum-v1</td>\n",
-       "      <td>0.021767</td>\n",
-       "      <td>0.002295</td>\n",
-       "      <td>-1.561634e+10</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>-15616340075.446</td>\n",
+       "      <td>131421759.473</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -209,47 +229,47 @@
       ],
       "text/plain": [
        "        method                       env  success rate  success rate sts  \\\n",
-       "1       CAT-RL                Acrobot-v1      0.380410          0.045072   \n",
-       "4       CAT-RL               CartPole-v1      0.000000          0.000000   \n",
-       "16      CAT-RL            LunarLander-v2      0.000150          0.000252   \n",
-       "7       CAT-RL            MountainCar-v0      0.964527          0.019723   \n",
-       "10      CAT-RL  MountainCarContinuous-v0      0.719381          0.401781   \n",
-       "13      CAT-RL               Pendulum-v1      0.019363          0.015303   \n",
-       "2   TileCoding                Acrobot-v1      0.860150          0.020599   \n",
-       "5   TileCoding               CartPole-v1      0.000000          0.000000   \n",
-       "17  TileCoding            LunarLander-v2      0.016700          0.001496   \n",
-       "8   TileCoding            MountainCar-v0      0.138140          0.007740   \n",
-       "11  TileCoding  MountainCarContinuous-v0      0.705800          0.035818   \n",
-       "14  TileCoding               Pendulum-v1      0.027400          0.004746   \n",
-       "0         binQ                Acrobot-v1      0.513350          0.016760   \n",
-       "3         binQ               CartPole-v1      0.000000          0.000000   \n",
-       "15        binQ            LunarLander-v2      0.016017          0.001951   \n",
-       "6         binQ            MountainCar-v0      0.198180          0.012595   \n",
-       "9         binQ  MountainCarContinuous-v0      0.406600          0.023200   \n",
-       "12        binQ               Pendulum-v1      0.021767          0.002295   \n",
+       "1       CAT-RL                Acrobot-v1         0.380             0.045   \n",
+       "4       CAT-RL               CartPole-v1         0.000             0.000   \n",
+       "16      CAT-RL            LunarLander-v2         0.000             0.000   \n",
+       "7       CAT-RL            MountainCar-v0         0.965             0.020   \n",
+       "10      CAT-RL  MountainCarContinuous-v0         0.719             0.402   \n",
+       "13      CAT-RL               Pendulum-v1         0.019             0.015   \n",
+       "2   TileCoding                Acrobot-v1         0.860             0.021   \n",
+       "5   TileCoding               CartPole-v1         0.000             0.000   \n",
+       "17  TileCoding            LunarLander-v2         0.017             0.001   \n",
+       "8   TileCoding            MountainCar-v0         0.138             0.008   \n",
+       "11  TileCoding  MountainCarContinuous-v0         0.706             0.036   \n",
+       "14  TileCoding               Pendulum-v1         0.027             0.005   \n",
+       "0         binQ                Acrobot-v1         0.513             0.017   \n",
+       "3         binQ               CartPole-v1         0.000             0.000   \n",
+       "15        binQ            LunarLander-v2         0.016             0.002   \n",
+       "6         binQ            MountainCar-v0         0.198             0.013   \n",
+       "9         binQ  MountainCarContinuous-v0         0.407             0.023   \n",
+       "12        binQ               Pendulum-v1         0.022             0.002   \n",
        "\n",
-       "    accumulated reward  \n",
-       "1        -3.476184e+08  \n",
-       "4         2.516508e+08  \n",
-       "16       -4.025444e+09  \n",
-       "7         1.446449e+10  \n",
-       "10        2.040210e+08  \n",
-       "13       -1.936006e+10  \n",
-       "2         1.020687e+09  \n",
-       "5         1.858473e+08  \n",
-       "17       -1.761776e+09  \n",
-       "8         1.355634e+09  \n",
-       "11        5.345090e+08  \n",
-       "14       -1.555522e+10  \n",
-       "0        -1.339428e+08  \n",
-       "3         2.057733e+08  \n",
-       "15       -1.833857e+09  \n",
-       "6         7.775134e+08  \n",
-       "9         6.614009e+08  \n",
-       "12       -1.561634e+10  "
+       "    accumulated reward  accumulated reward std  \n",
+       "1       -347618363.500            79685500.774  \n",
+       "4        251650810.200            57390804.337  \n",
+       "16     -4025443733.564            71502043.625  \n",
+       "7      14464492011.118           580858094.467  \n",
+       "10       204020978.288            47719812.385  \n",
+       "13    -19360056614.880          1090619204.989  \n",
+       "2       1020687281.900            92993773.390  \n",
+       "5        185847254.600             1584575.768  \n",
+       "17     -1761775790.133            37050527.710  \n",
+       "8       1355634141.843           154421772.818  \n",
+       "11       534508976.190            41252351.573  \n",
+       "14    -15555220716.758          1003009570.746  \n",
+       "0       -133942787.800            51462217.431  \n",
+       "3        205773254.000             5570689.014  \n",
+       "15     -1833856965.663            28385863.582  \n",
+       "6        777513395.587            97302647.137  \n",
+       "9        661400922.269            23920781.425  \n",
+       "12    -15616340075.446           131421759.473  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,11 +290,11 @@
     "            accumulated_reward.append(sum(data[method][env][seed][\"accumulated reward\"]))\n",
     "        \n",
     "        avg_success_rate = mean(success_rate)\n",
-    "        avg_success_rate_std = std(success_rate)\n",
+    "        std_success_rate = std(success_rate)\n",
     "        avg_accumulated_reward = mean(accumulated_reward)\n",
-    "        avg_accumulated_reward_std = std(accumulated_reward)\n",
+    "        std_accumulated_reward = std(accumulated_reward)\n",
     "\n",
-    "        l.append({\"method\": method, \"env\": env, \"success rate\": avg_success_rate, \"success rate sts\": avg_success_rate_std, \"accumulated reward\": avg_accumulated_reward, \"accumulated reward std\": avg_accumulated_reward_std})\n",
+    "        l.append({\"method\": method, \"env\": env, \"success rate\": avg_success_rate, \"success rate sts\": std_success_rate, \"accumulated reward\": avg_accumulated_reward, \"accumulated reward std\": std_accumulated_reward})\n",
     "\n",
     "df = pd.DataFrame(l).sort_values(by=[\"method\", \"env\"])\n",
     "\n",
@@ -434,10 +454,14 @@
     "        for seed in seeds:\n",
     "            success_rate.append(mean(data[method][env][seed][\"success\"]))\n",
     "            accumulated_reward.append(sum(data[method][env][seed][\"accumulated reward\"]))\n",
+    "            \n",
     "        avg_success_rate = mean(success_rate)\n",
+    "        std_success_rate = std(success_rate)\n",
     "        avg_accumulated_reward = mean(accumulated_reward)\n",
+    "        std_accumulated_reward = std(accumulated_reward)\n",
     "\n",
-    "        l.append({\"method\": method, \"env\": env, \"success rate\": avg_success_rate, \"accumulated reward\": avg_accumulated_reward})\n",
+    "        l.append({\"method\": method, \"env\": env, \"success rate\": avg_success_rate, \"success rate sts\": std_success_rate, \"accumulated reward\": avg_accumulated_reward, \"accumulated reward std\": std_accumulated_reward})\n",
+    "\n",
     "\n",
     "df = pd.DataFrame(l).sort_values(by=[\"method\", \"env\"])\n",
     "df"
