--- a/stats.ipynb
+++ b/stats.ipynb
@@ -575,6 +575,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        method                       env   sum reward   std reward\n",
+      "1       CAT-RL                Acrobot-v1   207.258600   544.511990\n",
+      "4       CAT-RL               CartPole-v1    13.019600     6.146334\n",
+      "16      CAT-RL            LunarLander-v2  -160.226937    36.628955\n",
+      "7       CAT-RL            MountainCar-v0  1168.740146    66.648395\n",
+      "10      CAT-RL  MountainCarContinuous-v0   685.358859   406.610391\n",
+      "13      CAT-RL               Pendulum-v1  -348.050003   759.771148\n",
+      "2   TileCoding                Acrobot-v1   816.422900    53.130532\n",
+      "5   TileCoding               CartPole-v1     9.687000     0.031279\n",
+      "17  TileCoding            LunarLander-v2  -147.956194   114.543336\n",
+      "8   TileCoding            MountainCar-v0   173.689267   520.996633\n",
+      "11  TileCoding  MountainCarContinuous-v0  1473.571815  1280.430432\n",
+      "14  TileCoding               Pendulum-v1  -977.943718   406.585534\n",
+      "0         binQ                Acrobot-v1   783.665400    50.401798\n",
+      "3         binQ               CartPole-v1     9.173900     0.093914\n",
+      "15        binQ            LunarLander-v2   -92.421568    26.760235\n",
+      "6         binQ            MountainCar-v0   420.811312   563.605493\n",
+      "9         binQ  MountainCarContinuous-v0   436.565307   386.837642\n",
+      "12        binQ               Pendulum-v1  -376.467122   579.983394\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\\\begin{tabular}{llrr}\\n\\\\toprule\\nmethod & env & sum reward & std reward \\\\\\\\\\n\\\\midrule\\nCAT-RL & Acrobot-v1 & 207.258600 & 544.511990 \\\\\\\\\\nCAT-RL & CartPole-v1 & 13.019600 & 6.146334 \\\\\\\\\\nCAT-RL & LunarLander-v2 & -160.226937 & 36.628955 \\\\\\\\\\nCAT-RL & MountainCar-v0 & 1168.740146 & 66.648395 \\\\\\\\\\nCAT-RL & MountainCarContinuous-v0 & 685.358859 & 406.610391 \\\\\\\\\\nCAT-RL & Pendulum-v1 & -348.050003 & 759.771148 \\\\\\\\\\nTileCoding & Acrobot-v1 & 816.422900 & 53.130532 \\\\\\\\\\nTileCoding & CartPole-v1 & 9.687000 & 0.031279 \\\\\\\\\\nTileCoding & LunarLander-v2 & -147.956194 & 114.543336 \\\\\\\\\\nTileCoding & MountainCar-v0 & 173.689267 & 520.996633 \\\\\\\\\\nTileCoding & MountainCarContinuous-v0 & 1473.571815 & 1280.430432 \\\\\\\\\\nTileCoding & Pendulum-v1 & -977.943718 & 406.585534 \\\\\\\\\\nbinQ & Acrobot-v1 & 783.665400 & 50.401798 \\\\\\\\\\nbinQ & CartPole-v1 & 9.173900 & 0.093914 \\\\\\\\\\nbinQ & LunarLander-v2 & -92.421568 & 26.760235 \\\\\\\\\\nbinQ & MountainCar-v0 & 420.811312 & 563.605493 \\\\\\\\\\nbinQ & MountainCarContinuous-v0 & 436.565307 & 386.837642 \\\\\\\\\\nbinQ & Pendulum-v1 & -376.467122 & 579.983394 \\\\\\\\\\n\\\\bottomrule\\n\\\\end{tabular}\\n'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# avg reward per episode\n",
+    "l = []\n",
+    "for env in envs:\n",
+    "    for method in methods:\n",
+    "        avg_reward_ep = []\n",
+    "        for seed in seeds:\n",
+    "\n",
+    "            avg_reward_ep.append(mean(data[method][env][seed][\"reward\"]))\n",
+    "        \n",
+    "        mean_avg_reward_ep = mean(avg_reward_ep)\n",
+    "        std_avg_reward_ep = std(avg_reward_ep)\n",
+    "        l.append({\"method\": method, \"env\": env, \"sum reward\": mean_avg_reward_ep, \"std reward\": std_avg_reward_ep})\n",
+    "df = pd.DataFrame(l).sort_values(by=[\"method\", \"env\"])\n",
+    "print(df)\n",
+    "# data frame to latex table\n",
+    "df.to_latex(index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
