--- a/stats.ipynb
+++ b/stats.ipynb
@@ -788,6 +788,222 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder = \"results\"\n",
+    "info_l = []\n",
+    "for env in envs:\n",
+    "    for method in methods:\n",
+    "        time_l = []\n",
+    "        for seed in seeds:\n",
+    "            path = f\"{folder}/{method}/{env}/{method}_{seed}_info.csv\"\n",
+    "            temp = pd.read_csv(path)\n",
+    "            time_l.append(temp[\"time\"].values[-1])\n",
+    "        mean_time = mean(time_l)\n",
+    "        std_time = std(time_l)\n",
+    "        info_l.append({\"method\": method, \"env\": env, \"time\": mean_time, \"std time\": std_time})\n",
+    "\n",
+    "info_df = pd.DataFrame(info_l).sort_values(by=[\"method\", \"env\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>method</th>\n",
+       "      <th>env</th>\n",
+       "      <th>time</th>\n",
+       "      <th>std time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CAT-RL</td>\n",
+       "      <td>Acrobot-v1</td>\n",
+       "      <td>271.947</td>\n",
+       "      <td>5.555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CAT-RL</td>\n",
+       "      <td>CartPole-v1</td>\n",
+       "      <td>8.414</td>\n",
+       "      <td>1.686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>CAT-RL</td>\n",
+       "      <td>LunarLander-v2</td>\n",
+       "      <td>262.725</td>\n",
+       "      <td>4.276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>CAT-RL</td>\n",
+       "      <td>MountainCar-v0</td>\n",
+       "      <td>101.825</td>\n",
+       "      <td>11.087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>CAT-RL</td>\n",
+       "      <td>MountainCarContinuous-v0</td>\n",
+       "      <td>13.294</td>\n",
+       "      <td>3.915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>CAT-RL</td>\n",
+       "      <td>Pendulum-v1</td>\n",
+       "      <td>206.358</td>\n",
+       "      <td>2.084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TileCoding</td>\n",
+       "      <td>Acrobot-v1</td>\n",
+       "      <td>425.867</td>\n",
+       "      <td>14.233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>TileCoding</td>\n",
+       "      <td>CartPole-v1</td>\n",
+       "      <td>26.049</td>\n",
+       "      <td>0.155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>TileCoding</td>\n",
+       "      <td>LunarLander-v2</td>\n",
+       "      <td>2506.457</td>\n",
+       "      <td>78.559</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>TileCoding</td>\n",
+       "      <td>MountainCar-v0</td>\n",
+       "      <td>337.447</td>\n",
+       "      <td>1.735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>TileCoding</td>\n",
+       "      <td>MountainCarContinuous-v0</td>\n",
+       "      <td>1314.878</td>\n",
+       "      <td>83.438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>TileCoding</td>\n",
+       "      <td>Pendulum-v1</td>\n",
+       "      <td>566.397</td>\n",
+       "      <td>2.232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>binQ</td>\n",
+       "      <td>Acrobot-v1</td>\n",
+       "      <td>134.801</td>\n",
+       "      <td>2.318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>binQ</td>\n",
+       "      <td>CartPole-v1</td>\n",
+       "      <td>3.714</td>\n",
+       "      <td>0.098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>binQ</td>\n",
+       "      <td>LunarLander-v2</td>\n",
+       "      <td>161.921</td>\n",
+       "      <td>10.031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>binQ</td>\n",
+       "      <td>MountainCar-v0</td>\n",
+       "      <td>78.156</td>\n",
+       "      <td>1.118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>binQ</td>\n",
+       "      <td>MountainCarContinuous-v0</td>\n",
+       "      <td>46.534</td>\n",
+       "      <td>0.756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>binQ</td>\n",
+       "      <td>Pendulum-v1</td>\n",
+       "      <td>113.616</td>\n",
+       "      <td>0.599</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        method                       env     time  std time\n",
+       "1       CAT-RL                Acrobot-v1  271.947     5.555\n",
+       "4       CAT-RL               CartPole-v1    8.414     1.686\n",
+       "16      CAT-RL            LunarLander-v2  262.725     4.276\n",
+       "7       CAT-RL            MountainCar-v0  101.825    11.087\n",
+       "10      CAT-RL  MountainCarContinuous-v0   13.294     3.915\n",
+       "13      CAT-RL               Pendulum-v1  206.358     2.084\n",
+       "2   TileCoding                Acrobot-v1  425.867    14.233\n",
+       "5   TileCoding               CartPole-v1   26.049     0.155\n",
+       "17  TileCoding            LunarLander-v2 2506.457    78.559\n",
+       "8   TileCoding            MountainCar-v0  337.447     1.735\n",
+       "11  TileCoding  MountainCarContinuous-v0 1314.878    83.438\n",
+       "14  TileCoding               Pendulum-v1  566.397     2.232\n",
+       "0         binQ                Acrobot-v1  134.801     2.318\n",
+       "3         binQ               CartPole-v1    3.714     0.098\n",
+       "15        binQ            LunarLander-v2  161.921    10.031\n",
+       "6         binQ            MountainCar-v0   78.156     1.118\n",
+       "9         binQ  MountainCarContinuous-v0   46.534     0.756\n",
+       "12        binQ               Pendulum-v1  113.616     0.599"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
